--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
 	<body>
 
 		<h1>ePortfolio for CIS 4930: Internet Computing</h1>
-		
+
 		<h2>Christian Mosey</h2>
-		
+
 		<hr>
 
 		<a href="assign1/index.html">
 			<h2>Assignment 1</h2>
 		</a>
-		
-		
+
+
 		<h3>Reflection:</h3>
 		<p>In part one, we started writing this very page. This part tasked us with using the most commonly used
 		HTML tags to write a page that will keep track and comment on the rest of the work we do in this class.
-		This introduced us to basic formatting and HTML. In part two, we made a lesson about a topic that have interest in. This built further upon the parts from part 1. 
+		This introduced us to basic formatting and HTML. In part two, we made a lesson about a topic that have interest in. This built further upon the parts from part 1.
 		Introducing some more parts of HTML such as images and ordered lists. We also had to format and display a lot more text than
 		in part 1. Part three introduced us to tables and tags. I learned how to create links directly to HTML elements and how to create a well structured table.
 		Part four was out first introduction to CSS and formatting. I learned how to link CSS files to HTML and how to edit and format the various elements of HTML to my liking.
@@ -34,12 +34,12 @@
 			<li>Learn basic CSS and how to format and change your HTML elements to your liking</li>
 		</ul>
 		<hr>
-		
+
 		<a href="assign2/index.html">
 			<h2>Assignment 2</h2>
 		</a>
-		
-		
+
+
 		<h3>Reflection:</h3>
 		<p>In part one, I wrote a simple form using various elements of html input to create a mailing address formatter.
 		This built on the html and css or previous assignment but also added in new tools. In part two I implement the logic and
@@ -52,6 +52,26 @@
 			<li>Learn JavaScript and it's interactions with html and input and output</li>
 		</ul>
 		<hr>
-	
+		<a href="assign3/index.html">
+			<h2>Assignment 3</h2>
+		</a>
+
+
+		<h3>Reflection:</h3>
+		<p>In part one, I wrote a simple form to receive a list of values from the user. I then wrote a function that took in that input
+			and parsed it into an array of integers. In part two, I wrote a javascript file with various statistical functions to use with
+			the user's values. This includes but is not limited to mean, variance, and mode. I then wrote code to implement this library as well as
+			output the calculated values in the index.html file. In part 3, I tested my application against excel on three data sets that varied in size as well as range.
+			I then complied the results in the unit tests page. After this assignment, I feel comfortable linking external javascript files and using a
+			library in my website.
+		</p>
+		<br>
+		<h3>Learning Objectives</h3>
+		<ul>
+			<li>Further develop HTML input and output</li>
+			<li>Further develop javascript and learn how to build and use a js library</li>
+			<li>Practice unit testing our javascript library</li>
+		</ul>
+		<hr>
 	</body>
 </html>
