--- a/index.html
+++ b/index.html
@@ -111,5 +111,24 @@
 			<li>Learn how to interface front facing and back facing sites.</li>
 		</ul>
 		<hr>
+		<a href="assign6/index.php">
+			<h2>Assignment 6</h2>
+		</a>
+
+
+		<h3>Reflection:</h3>
+		<p>In this assignment we continued working with php and server side web development. We made a mysql table in which we would take
+			our responses from our reviewers and insert them. We visualized our table using an ERD diagram. We also learned
+			one of the most common attacks on SQL and how to combat it. This assignment showed me how to interface a front end
+			webapp with a database safely and securely.
+		</p>
+		<br>
+		<h3>Learning Objectives</h3>
+		<ul>
+			<li>Continue learning of php</li>
+			<li>Learn how to create and manipulate a database</li>
+			<li>How to program a web app to control a database safely and securely</li>
+		</ul>
+		<hr>
 	</body>
 </html>
